# turingTestThreeLLM

./: .dockerignore  .gitignore  Dockerfile  flake.nix  model_metadata.json  pyproject.toml  requirements.txt  setup.cfg  system_prompts.json
src/: game.py  judge.py  main.py  model_metadata.py  player.py  printer.py  system_prompts.py  turing_test.py  user_asker.py
src/models/: errors.py  judge.py  player.py
