[project]
name = "turing-test-with-three-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[anthropic,google-genai,mistralai,openai]>=0.3.26",
    "mypy>=1.16.1",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.12.0",
]
